--- a/src/components/Dashboard/Content.css
+++ b/src/components/Dashboard/Content.css
@@ -3,7 +3,7 @@
     flex: 1;
 
     .scroll {
-        max-height: 90%;
+        max-height: 100%;
         overflow-y: scroll;
         flex-direction: column;
         padding: 1rem;
