--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -1,5 +1,5 @@
 .sidebar {
-    flex: 1;
+    width: 70px;
 
     border-right: 0px solid gray;
 
